# rcb4

./: README.md  genindex.html  index.html  objects.inv  pyproject.toml  python-basics.html  python-robot-examples.html  requirements.txt  robot-programming-basics.html  search.html  searchindex.js  setup.py
.github/workflows/: release.yml  test.yml
_sources/: index.md.txt  python-basics.md.txt  python-robot-examples.md.txt  robot-programming-basics.md.txt
_sources/getting-started/: index.md.txt  wsl-setup.md.txt
_sources/linux-tutorial/: basics.md.txt  git-basics.md.txt  git-quest.md.txt  index.md.txt  network-basics.md.txt  network-quest.md.txt  quest.md.txt  scoreboard.md.txt
_sources/linux-tutorial/bonus/: easter_eggs.md.txt
_sources/projects/: index.md.txt
_sources/robot-control/: index.md.txt
_sources/ros-basics/: index.md.txt
_static/: version_switcher.json
getting-started/: index.html  wsl-setup.html
linux-tutorial/: basics.html  git-basics.html  git-quest.html  index.html  network-basics.html  network-quest.html  quest.html  scoreboard.html
linux-tutorial/bonus/: easter_eggs.html
projects/: index.html
rcb4/: armh7interface.py  asm.py  ics.py  imu_utils.py  serial_utils.py  units.py
rcb4/apps/: write_firmware.py
rcb4/assets/system/: 99-rcb4-udev.rules
rcb4/data/: __init__.py
robot-control/: index.html
ros-basics/: index.html
ros/kxr_controller/: CMakeLists.txt  package.xml  requirements.in
ros/kxr_controller/action/: ControlAirBoard.action  PressureControl.action
ros/kxr_controller/cfg/: KXRParameters.cfg
ros/kxr_controller/config/: default.rviz  imu_calibration.yaml
ros/kxr_controller/include/kxr_controller/: kxr_robot_hardware.h
ros/kxr_controller/launch/: demo.launch  kxr_controller.launch  kxr_controller_for_wheel.launch
ros/kxr_controller/msg/: PressureControl.msg
ros/kxr_controller/node_scripts/: imu_calibrator.py  joint_states_concat.py  rcb4_ros_bridge.py
ros/kxr_controller/python/kxr_controller/: check_ros_master.py  kxr_interface.py  module_loader.py  multi_lock.py  reconfigure_utils.py  serial.py
ros/kxr_controller/scripts/: interface  interface.py  scan_servo_ids.py
ros/kxr_controller/src/: kxr_robot_hardware.cpp
ros/kxr_controller/test/: kxr_controller.test
ros/kxr_models/: CMakeLists.txt  package.xml
ros/kxr_models/config/: kxrmw4a6h2m_mecanum_drive_controller.yaml
ros/kxr_models/node_scripts/: urdf_model_server.py
ros/kxr_models/python/kxr_models/: download_urdf.py  urdf.py
ros/kxr_rqt_plugin/: CMakeLists.txt  package.xml  plugin.xml  setup.py
ros/kxr_rqt_plugin/resource/: ServoOnOff.ui
ros/kxr_rqt_plugin/scripts/: rqt_servo_on_off
ros/kxr_rqt_plugin/src/rqt_servo_on_off/: servo_on_off.py
ros/kxreus/: CMakeLists.txt  package.xml  requirements.in
ros/kxreus/euslisp/: kxr-interface.l
tests/rcb4_tests/: test_armh7interface.py  test_rcb4interface.py
