<?xml version="1.0"?>
<package format="2">
  <name>kxr_rqt_plugin</name>
  <version>0.1.0</version>
  <description>RQt plugin for KXR servo control</description>

  <maintainer email="yanokura@jsk.imi.i.u-tokyo.ac.jp">Iori Yanokura</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>kxr_controller</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
